[gd_scene load_steps=5 format=2]

[ext_resource path="res://ShuttleView/ShuttleView.tscn" type="PackedScene" id=1]
[ext_resource path="res://UpGoer.gd" type="Script" id=2]
[ext_resource path="res://ControlPanel/ControlPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://TwentySecondTimer.gd" type="Script" id=4]

[node name="UpGoer" type="Node2D"]
script = ExtResource( 2 )

[node name="ShuttleView" parent="." instance=ExtResource( 1 )]

[node name="ControlPanel" parent="." instance=ExtResource( 3 )]
margin_right = 1440.0
margin_bottom = 900.0

[node name="TwentySecondTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
script = ExtResource( 4 )

[node name="LaunchTimer" type="Timer" parent="TwentySecondTimer"]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="TwentySecondTimer" to="." method="_on_TwentySecondTimer_timeout"]
[connection signal="timeout" from="TwentySecondTimer/LaunchTimer" to="TwentySecondTimer" method="_on_LaunchTimer_timeout"]
